# Pyspark-Training

./: .gitignore  README.md
Docker/: docker-compose.yaml
Notebooks/: Delta_Format.dbc  Intro.ipynb  SparkSession-SparkContext-SqlContext-HiveContext.ipynb  Window_Functions.ipynb  udf_lambda.ipynb
Pyspark-Jupyter-Docker/: docker-compose.yaml
Python/: Install.md  requirements.txt
Python/Notebooks/: MyFirstDataFrame.ipynb
Python/Notebooks/vgsales_2.json/: part-00000-bc395537-1042-4aa6-beb8-bc836eb58974-c000.json
Spark_Structured_Streaming/: .gitignore  confluent_producer_example.py  docker-compose.yaml  getting_started.ini  pyproject.toml  pyspark_structured_streaming_etl.py  python_kafka_post_http.py  python_kafka_producer.py  simple_producer.py  spark_structured_streaming.md
TipsAndTricks/: TableSchema.py
TipsAndTricks/testes_unitarios/scripts/: simple_transformation_data.py
TipsAndTricks/testes_unitarios/tests/: simple_transformation_data_tests.py
